# TerminalCrypt

./: .gitignore  Cargo.toml  LICENSE  README.md  cryptex_terminal.py  pyproject.toml  setup.py  terminalcrypt.toml.example
.github/workflows/: ci.yml
src/: lib.rs
terminalcrypt/: __init__.py  analytics.py  app.py  cli.py  config.py  dashboard.py  formatters.py  indicators.py  notifications.py  rest.py  settings.py  state.py  storage.py  streams.py
terminalcrypt/_cython/: indicators_cy.c  indicators_cy.pyx
tests/: test_cli.py  test_dashboard.py  test_indicators.py  test_settings.py  test_storage.py  test_streams.py
