[project]
name = "terminalcrypt"
version = "3.2.0"
description = "TerminalCrypt: terminal crypto dashboard with WebSocket feeds and live indicators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client",
    "requests",
    "rich",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/az-terminal"
Bug Tracker = "https://github.com/YOUR_USERNAME/az-terminal/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=0.29"]
build-backend = "setuptools.build_meta"
