[project]
name = "terminalcrypt"
version = "3.2.0"
description = "TerminalCrypt: terminal crypto dashboard with WebSocket feeds and live indicators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client",
    "requests",
    "rich",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
    "Operating System :: OS Independent",
]

[project.scripts]
terminalcrypt = "terminalcrypt.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/az-terminal"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/az-terminal/issues"

[tool.setuptools.packages.find]
include = ["terminalcrypt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "terminalcrypt._rust"
features = ["pyo3/extension-module"]
